[package]
name = "aletheia-organon"
version.workspace = true
description = "Tool registry, definitions, and built-in tool executors"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# Computer use tool: screen capture, action dispatch, Landlock sandbox.
# Not compiled by default — requires Linux kernel 5.13+ with Landlock support.
computer-use = []
# Gates MockToolExecutor, ToolExecutorSpec, and other test helpers. No test code in release binaries.
test-support = ["aletheia-hermeneus/test-support"]
test-core = []
test-full = []

[dependencies]
aletheia-hermeneus = { path = "../hermeneus" }
aletheia-koina = { path = "../koina" }
base64 = { workspace = true }
indexmap = { workspace = true }
jiff = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
rustix = { workspace = true, features = ["process", "thread"] }
seccompiler = "0.5"

[dev-dependencies]
indexmap = { workspace = true }
proptest = { workspace = true }
rustls = { workspace = true }
snafu = { workspace = true }
static_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[[test]]
name = "proptest_registry"
path = "tests/proptest_registry.rs"
required-features = ["test-support"]

[[test]]
name = "spec_validation"
path = "tests/spec_validation.rs"
required-features = ["test-support"]
