[package]
name = "organon"
version.workspace = true
description = "Tool registry, definitions, and built-in tool executors"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# Computer use tool: screen capture, action dispatch, Landlock sandbox.
# Not compiled by default — requires Linux kernel 5.13+ with Landlock support.
computer-use = []
# Energeia capability tools (dromeus, dokimasia, diorthosis, epitropos, parateresis,
# mathesis, prographe, schedion, metron). Wires to real energeia subsystem.
energeia = ["dep:energeia"]
# Z3 SMT solver tool (z3_solver). Bundled so the default build doesn't pull libz3.
z3 = ["dep:z3"]
# Gates MockToolExecutor, ToolExecutorSpec, and other test helpers. No test code in release binaries.
test-support = ["hermeneus/test-support", "dep:rustls"]
test-core = []
test-full = []
# Deferred tool schemas: only tool name+description in LLM requests; full schemas
# fetched on demand via the `tool_schema` meta-tool. Default OFF so active agents
# are unaffected; operators flip this per-deployment after the flag soaks.
deferred-schemas = []

[dependencies]
eidos = { path = "../eidos" }
gnosis = { path = "../gnosis" }
energeia = { path = "../energeia", optional = true, features = [
    "storage-fjall",
] }
hermeneus = { path = "../hermeneus" }
poiesis-core = { path = "../poiesis/core" }
poiesis-text = { path = "../poiesis/text" }
poiesis-sheet = { path = "../poiesis/sheet" }
poiesis-lint = { path = "../poiesis/lint" }
poiesis-slides = { path = "../poiesis/slides" }
poiesis-typst = { path = "../poiesis/typst" }
poiesis-scaffold = { path = "../poiesis/scaffold" }
poiesis-verify = { path = "../poiesis/verify" }
poiesis-intake = { path = "../poiesis/intake" }
poiesis-doc = { path = "../poiesis/doc" }
poiesis-diff = { path = "../poiesis/diff" }
poiesis-inspect = { path = "../poiesis/inspect" }
koina = { path = "../koina" }
taxis = { path = "../taxis" }
base64 = { workspace = true }
indexmap = { workspace = true }
jiff = { workspace = true }
prometheus-client = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
z3 = { version = "0.20", optional = true, features = ["bundled"] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
rustix = { workspace = true, features = ["process", "thread"] }
seccompiler = "0.5"

[dependencies.rustls]
workspace = true
optional = true

[dev-dependencies]
energeia = { path = "../energeia", features = ["storage-fjall"] }
fjall = { version = "3" }
indexmap = { workspace = true }
proptest = { workspace = true }
rustls = { workspace = true }
snafu = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[[test]]
name = "proptest_registry"
path = "tests/proptest_registry.rs"
required-features = ["test-support"]

[[test]]
name = "spec_validation"
path = "tests/spec_validation.rs"
required-features = ["test-support"]

[[test]]
name = "energeia_tools"
path = "tests/energeia_tools.rs"
required-features = ["energeia"]
