[package]
name = "organon"
version.workspace = true
description = "Tool registry, definitions, and built-in tool executors"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[test]]
name = "proptest_registry"
path = "tests/proptest_registry.rs"
required-features = ["test-support"]

[[test]]
name = "spec_validation"
path = "tests/spec_validation.rs"
required-features = ["test-support"]

[[test]]
name = "energeia_tools"
path = "tests/energeia_tools.rs"
required-features = ["energeia"]

[features]
# Computer use tool: screen capture, action dispatch, Landlock sandbox.
# Not compiled by default — requires Linux kernel 5.13+ with Landlock support.
computer-use = []
# Receipt verification for hallucination detection (default OFF).
receipt_verification = []
# Energeia capability tools (dromeus, dokimasia, diorthosis, epitropos, parateresis,
# mathesis, prographe, schedion, metron). Wires to real energeia subsystem.
energeia = ["dep:energeia"]
# Bookkeeper tools: `katharos` worktree cleanup is implemented; `tamias`
# prompt archival remains deferred. Default OFF so deployments opt in explicitly.
bookkeeper = []
# Z3 SMT solver tool (z3_solver). Bundled so the default build doesn't pull libz3.
z3 = ["dep:z3"]
# Gates MockToolExecutor, ToolExecutorSpec, and other test helpers. No test code in release binaries.
test-support = ["hermeneus/test-support", "dep:rustls"]
# WHY: test-core must enable energeia so `energeia_tools` runs in the blocking gate.
test-core = ["energeia"]
test-full = ["test-core"]
# Deferred tool schemas: only tool name+description in LLM requests; full schemas
# fetched on demand via the `tool_schema` meta-tool. Default OFF so active agents
# are unaffected; operators flip this per-deployment after the flag soaks.
deferred-schemas = []
# Allow absolute paths in `{{file:...}}` interpolation. Default OFF for safety.
allow-absolute-file-refs = []

[dependencies]
eidos = { path = "../eidos" }
gnosis = { path = "../gnosis" }
graphe = { path = "../graphe" }
energeia = { path = "../energeia", optional = true, features = [
    "storage-fjall",
] }
hermeneus = { path = "../hermeneus" }
poiesis-core = { path = "../poiesis/core" }
poiesis-sheet = { path = "../poiesis/sheet" }
poiesis-lint = { path = "../poiesis/lint" }
poiesis-slides = { path = "../poiesis/slides" }
poiesis-typst = { path = "../poiesis/typst" }
poiesis-scaffold = { path = "../poiesis/scaffold" }
poiesis-verify = { path = "../poiesis/verify" }
poiesis-intake = { path = "../poiesis/intake" }
poiesis-doc = { path = "../poiesis/doc" }
poiesis-charts = { path = "../poiesis/charts", features = ["theme-bridge"] }
poiesis-theme = { path = "../poiesis/theme" }
poiesis-diff = { path = "../poiesis/diff" }
poiesis-inspect = { path = "../poiesis/inspect" }
koina = { path = "../koina" }
taxis = { path = "../taxis" }
base64 = { workspace = true }
getrandom = "0.3"
indexmap = { workspace = true }
hmac = { workspace = true }
jiff = { workspace = true }
prometheus-client = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
which = "8"
zip = { version = "=8.5.1", default-features = false, features = ["deflate"] }
z3 = { version = "0.20", optional = true, features = ["bundled"] }

[dependencies.rustls]
workspace = true
optional = true

[dev-dependencies]
energeia = { path = "../energeia", features = ["storage-fjall"] }
fjall = { version = "3", default-features = false, features = ["lz4"] }
indexmap = { workspace = true }
libc = { workspace = true }
proptest = { workspace = true }
rustls = { workspace = true }
snafu = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
rustix = { workspace = true, features = ["process", "thread"] }
seccompiler = "0.5"

[lints]
workspace = true
